<resources>
    <string name="app_name">Vishwa Agro Tech</string>

    <string name="todo">TODO</string>
    <string name="other_details">Other Details</string>
    <string name="android_developer">Android Developer</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="bank_details">Bank Details</string>
    <string name="bank_name">Bank name</string>
    <string name="account_number">Account Number</string>
    <string name="joined_date">Joined Date</string>
    <string name="attendance">Attendance</string>
    <string name="check_in">Check in</string>
    <string name="check_out">Check Out</string>
    <string name="apply_leave">Apply Leave</string>
    <string name="reason">Reason</string>
    <string name="submit">Submit</string>
    <string name="apply_early_leave">Apply Early Leave</string>
    <string name="check_in_out_status">Check In/Out Status</string>
    <string name="dash">-</string>
    <string name="late_entry">Late Entry</string>
    <string name="_00_03m">00 03m</string>
    <string name="early_leave">Early Leave</string>
    <string name="_00_00m">00 00m</string>
    <string name="total_delay">Total Delay</string>
    <string name="history">Attendance History</string>
    <string name="date">Date</string>
    <string name="day">Day</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="change_password">Change Password</string>
    <string name="desktop_publishing_software_like_aldus_pagemaker_including_versions">Change your password of the account of the attendance to make your account secure.</string>
    <string name="new_password">New Password</string>
    <string name="change">Change</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="leave">Leave</string>
    <string name="isuue_leave">Issue Leave</string>
    <string name="early_exit">Early Exit</string>
    <string name="leaves">Leaves</string>
    <string name="filter">Filter</string>
    <string name="forget_password">Forget Password</string>
    <string name="email">Email</string>
    <string name="send">Send</string>
    <string name="get_started_with_nyour_attendance">Get Started with\nYour attendance</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_quisque_ac_sed_sed_enim">Vishwa Agro Tech Employee.</string>
    <string name="by_logging_in_you_will_accept_all_the_conditions">By logging in you will accept all the conditions</string>
    <string name="login">Login</string>
    <string name="upcoming">Upcoming</string>
    <string name="past_holidays">Past Holidays</string>
    <string name="check_in_out">Check In | Check Out</string>
    <string name="overview">Overview</string>
    <string name="present">Present</string>
    <string name="remaining">Remaining</string>
    <string name="holidays">Holidays</string>
    <string name="weekly_report">Weekly Report</string>
    <string name="leave_lists">Leave Lists</string>
    <string name="description">Description</string>
    <string name="select_date">Select Date</string>
    <string name="request_leave">Request Leave</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="services">Services</string>
    <string name="log_out">Log Out</string>
    <string name="security_check">Security Check</string>
    <string name="company_rules">Company Rules</string>
    <string name="notices">Notices</string>
    <string name="additional">Additional</string>
    <string name="meetings">Meetings</string>
    <string name="leave_calendar">Leave Calendar</string>
    <string name="team_sheet">Team Sheet</string>
    <string name="profile">Profile</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="good_morning">Hello there,</string>
    <string name="days">Days</string>
    <string name="slash">/</string>
    <string name="default_notification_channel_id">DigitalHR</string>
    <string name="pending_leave">Pending Leave</string>
    <string name="approved">Approved</string>
    <string name="male">Male</string>
    <string name="lorem_ipsum_dolo">Greetings for the day!</string>
    <string name="select_a_date_from">Select a date from</string>
    <string name="select_a_date_to">Select a date to</string>
    <string name="dismiss">Dismiss</string>
    <string name="current_password">Current Password</string>
    <string name="urgent_exit">Urgent Exit</string>
    <string name="this_month">This Month</string>
    <string name="this_year">This Year</string>
    <string name="hours">Hours</string>
    <string name="about_us">About Us</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="phone_no">Phone No.</string>
    <string name="post">Post</string>
    <string name="fullname">Fullname</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="note_if_you_wish_to_change_the_information_beside_these_value_shown_please_contact_the_admin_to_change_the_information">Note :- If you wish to change the information beside these value shown please contact the admin to change the information.</string>
    <string name="update_profile">Update Profile</string>
    <string name="agenda">Agenda</string>
    <string name="participant">Participant</string>
    <string name="resizable_text_read_more">Read More\n</string>
    <string name="resizable_text_read_less">Read Less</string>
</resources>