<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="handler"
            type="com.vishwaagrotech.digitalhr.ui.dashboard.HomeFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gradient_linear"
        android:orientation="vertical"
        android:padding="@dimen/section_spacing">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginVertical="@dimen/section_spacing"
                android:text="@string/attendance"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_h4" />

            <ImageView
                android:id="@+id/image_close"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_close"
                app:tint="@color/white" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/section_spacing"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/inner_spacing"
                android:layout_weight=".5"
                android:background="@drawable/button_radius"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="@{()->handler.checkIn()}"
                android:text="@string/check_in"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size_h6"
                android:textStyle="bold"
                app:backgroundTint="@null"
                app:cornerRadius="@dimen/_5sdp" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/inner_spacing"
                android:layout_weight=".5"
                android:background="@drawable/button_radius2"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="@{()->handler.checkOut()}"
                android:text="@string/check_out"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size_h6"
                android:textStyle="bold"
                app:backgroundTint="@null"
                app:cornerRadius="@dimen/_5sdp" />
        </LinearLayout>

    </LinearLayout>
</layout>