<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="handler"
            type="com.vishwaagrotech.digitalhr.ui.profile.UpdateProfileFragment" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_light_arrow" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/button_update"
            android:layout_below="@id/toolbar">

            <LinearLayout
                android:id="@+id/linear_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/section_spacing"
                android:layout_marginTop="@dimen/section_spacing"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/inner_spacing"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:layout_marginEnd="@dimen/_2sdp"
                    app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
                    app:boxCornerRadiusBottomStart="0dp"
                    app:boxCornerRadiusTopEnd="0dp"
                    app:boxCornerRadiusTopStart="@dimen/_5sdp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintEnabled="false">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edit_full_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/lightWhite"
                        android:hint="@string/fullname"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textCursorDrawable="@null"
                        android:textSize="@dimen/text_size_h5" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/inner_spacing"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:layout_marginEnd="@dimen/_2sdp"
                    app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
                    app:boxCornerRadiusBottomStart="0dp"
                    app:boxCornerRadiusTopEnd="0dp"
                    app:boxCornerRadiusTopStart="@dimen/_5sdp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintEnabled="false">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edit_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/lightWhite"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textCursorDrawable="@null"
                        android:textSize="@dimen/text_size_h5" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/inner_spacing"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:layout_marginEnd="@dimen/_2sdp"
                    app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
                    app:boxCornerRadiusBottomStart="0dp"
                    app:boxCornerRadiusTopEnd="0dp"
                    app:boxCornerRadiusTopStart="@dimen/_5sdp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintEnabled="false">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edit_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/lightWhite"
                        android:hint="@string/address"
                        android:inputType="textPostalAddress"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textCursorDrawable="@null"
                        android:textSize="@dimen/text_size_h5" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/inner_spacing"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:layout_marginEnd="@dimen/_2sdp"
                    app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
                    app:boxCornerRadiusBottomStart="0dp"
                    app:boxCornerRadiusTopEnd="0dp"
                    app:boxCornerRadiusTopStart="@dimen/_5sdp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintEnabled="false">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edit_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/lightWhite"
                        android:hint="@string/phone_no"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textCursorDrawable="@null"
                        android:textSize="@dimen/text_size_h5" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/inner_spacing"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:layout_marginEnd="@dimen/_2sdp"
                    android:background="@drawable/button_radius"
                    android:backgroundTintMode="add"
                    android:gravity="start|center"
                    android:hint="@string/date_of_birth"
                    android:onClick="@{()->handler.onDatePickerClicked()}"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/text_size_h5"
                    app:backgroundTint="@color/lightWhite"
                    app:cornerRadius="0dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/inner_spacing"
                    android:text="@string/gender"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_h6" />

                <RadioGroup
                    android:id="@+id/radiogroup_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_h5" />

                    <RadioButton
                        android:id="@+id/rb_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_h5" />

                    <RadioButton
                        android:id="@+id/rb_others"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/others"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_h5" />
                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/inner_spacing"
                    android:gravity="center"
                    android:text="@string/note_if_you_wish_to_change_the_information_beside_these_value_shown_please_contact_the_admin_to_change_the_information"
                    android:textColor="@color/grey_a7"
                    android:textSize="@dimen/text_size_h6" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/section_spacing"
            android:layout_marginTop="@dimen/section_spacing"
            android:layout_marginEnd="@dimen/section_spacing"
            android:layout_marginBottom="@dimen/section_spacing"
            android:background="@drawable/button_radius"
            android:backgroundTintMode="add"
            android:onClick="@{()->handler.onUpdateClicked()}"
            android:text="@string/update_profile"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_h6"
            app:backgroundTint="@null"
            app:cornerRadius="0dp" />
    </RelativeLayout>
</layout>